Update Pandas Data Visualization Exercise.ipynb

--- a/Data Visualization/Pandas Data Visualization Exercise.ipynb
+++ b/Data Visualization/Pandas Data Visualization Exercise.ipynb
@@ -6,11 +6,11 @@
    "source": [
     "___\n",
     "\n",
-    "<a href='http://www.pieriandata.com'> <img src='../Pierian_Data_Logo.png' /></a>\n",
+    "\n",
     "___\n",
     "# Pandas Data Visualization Exercise\n",
     "\n",
-    "This is just a quick exercise for you to review the various plots we showed earlier. Use **df3** to replicate the following plots. "
+    "Use **df3** to replicate the following plots. "
    ]
   },
   {
